java/src/main/Antlr/gwhileParser.java
// $ANTLR 3.5.1 /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g 2023-01-19 13:40:26

package Antlr;

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;

import CompilationException.CompilationException;


@SuppressWarnings("all")
public class gwhileParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BACKSLASHN", "BACKSLASHR", "BODY", 
		"COMMAND", "COMMENT", "CONS", "Dec", "EXPRESSION", "FONCTION_DEF", "FOR", 
		"FOREACH", "FUNCTION", "HD", "IF", "INPUTSUB", "LIST", "Maj", "Min", "OUTPUT", 
		"PROGDEF", "SPACES", "STRING", "Symbol", "TL", "VARIABLE", "VARIABLE_DEF", 
		"VARIABLE_DEF_NAMES", "VARIABLE_DEF_VALUES", "Variable", "WHILE", "'%'", 
		"'('", "')'", "','", "':'", "':='", "'?='", "'cons '", "'do'", "'else'", 
		"'fi'", "'for'", "'foreach'", "'function'", "'hd'", "'if'", "'in'", "'list'", 
		"'nil'", "'nop'", "'od'", "'read'", "'then'", "'tl'", "'while'", "'write'"
	};
	public static final int EOF=-1;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int BACKSLASHN=4;
	public static final int BACKSLASHR=5;
	public static final int BODY=6;
	public static final int COMMAND=7;
	public static final int COMMENT=8;
	public static final int CONS=9;
	public static final int Dec=10;
	public static final int EXPRESSION=11;
	public static final int FONCTION_DEF=12;
	public static final int FOR=13;
	public static final int FOREACH=14;
	public static final int FUNCTION=15;
	public static final int HD=16;
	public static final int IF=17;
	public static final int INPUTSUB=18;
	public static final int LIST=19;
	public static final int Maj=20;
	public static final int Min=21;
	public static final int OUTPUT=22;
	public static final int PROGDEF=23;
	public static final int SPACES=24;
	public static final int STRING=25;
	public static final int Symbol=26;
	public static final int TL=27;
	public static final int VARIABLE=28;
	public static final int VARIABLE_DEF=29;
	public static final int VARIABLE_DEF_NAMES=30;
	public static final int VARIABLE_DEF_VALUES=31;
	public static final int Variable=32;
	public static final int WHILE=33;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public gwhileParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public gwhileParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return gwhileParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g"; }


	public static class program_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "program"
	// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:31:1: program : ( function )+ -> ^( PROGDEF ( function )+ ) ;
	public final gwhileParser.program_return program() throws RecognitionException, CompilationException {
		gwhileParser.program_return retval = new gwhileParser.program_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope function1 =null;

		RewriteRuleSubtreeStream stream_function=new RewriteRuleSubtreeStream(adaptor,"rule function");

		try {
			// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:31:9: ( ( function )+ -> ^( PROGDEF ( function )+ ) )
			// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:31:11: ( function )+
			{
			// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:31:11: ( function )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==47) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:31:11: function
					{
					pushFollow(FOLLOW_function_in_program110);
					function1=function();
					state._fsp--;

					stream_function.add(function1.getTree());
					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			// AST REWRITE
			// elements: function
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 31:21: -> ^( PROGDEF ( function )+ )
			{
				// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:31:24: ^( PROGDEF ( function )+ )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PROGDEF, "PROGDEF"), root_1);
				if ( !(stream_function.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_function.hasNext() ) {
					adaptor.addChild(root_1, stream_function.nextTree());
				}
				stream_function.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			throw new CompilationException("Erreur de syntaxe");
			/*reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);*/
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class function_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "function"
	// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:32:1: function : 'function' Symbol ':' definition -> ^( FONCTION_DEF Symbol definition ) ;
	public final gwhileParser.function_return function() throws RecognitionException, CompilationException {
		gwhileParser.function_return retval = new gwhileParser.function_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal2=null;
		Token Symbol3=null;
		Token char_literal4=null;
		ParserRuleReturnScope definition5 =null;

		Object string_literal2_tree=null;
		Object Symbol3_tree=null;
		Object char_literal4_tree=null;
		RewriteRuleTokenStream stream_47=new RewriteRuleTokenStream(adaptor,"token 47");
		RewriteRuleTokenStream stream_38=new RewriteRuleTokenStream(adaptor,"token 38");
		RewriteRuleTokenStream stream_Symbol=new RewriteRuleTokenStream(adaptor,"token Symbol");
		RewriteRuleSubtreeStream stream_definition=new RewriteRuleSubtreeStream(adaptor,"rule definition");

		try {
			// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:32:10: ( 'function' Symbol ':' definition -> ^( FONCTION_DEF Symbol definition ) )
			// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:32:12: 'function' Symbol ':' definition
			{
			string_literal2=(Token)match(input,47,FOLLOW_47_in_function127);  
			stream_47.add(string_literal2);

			Symbol3=(Token)match(input,Symbol,FOLLOW_Symbol_in_function129);  
			stream_Symbol.add(Symbol3);

			char_literal4=(Token)match(input,38,FOLLOW_38_in_function131);  
			stream_38.add(char_literal4);

			pushFollow(FOLLOW_definition_in_function133);
			definition5=definition();
			state._fsp--;

			stream_definition.add(definition5.getTree());
			// AST REWRITE
			// elements: Symbol, definition
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 32:45: -> ^( FONCTION_DEF Symbol definition )
			{
				// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:32:48: ^( FONCTION_DEF Symbol definition )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(FONCTION_DEF, "FONCTION_DEF"), root_1);
				adaptor.addChild(root_1, stream_Symbol.nextNode());
				adaptor.addChild(root_1, stream_definition.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			throw new CompilationException("Erreur de syntaxe");
			/*reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);*/
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "function"


	public static class definition_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "definition"
	// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:33:1: definition : 'read' input '%' commands '%' 'write' output -> ^( BODY ( input )? commands output ) ;
	public final gwhileParser.definition_return definition() throws RecognitionException, CompilationException {
		gwhileParser.definition_return retval = new gwhileParser.definition_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal6=null;
		Token char_literal8=null;
		Token char_literal10=null;
		Token string_literal11=null;
		ParserRuleReturnScope input7 =null;
		ParserRuleReturnScope commands9 =null;
		ParserRuleReturnScope output12 =null;

		Object string_literal6_tree=null;
		Object char_literal8_tree=null;
		Object char_literal10_tree=null;
		Object string_literal11_tree=null;
		RewriteRuleTokenStream stream_55=new RewriteRuleTokenStream(adaptor,"token 55");
		RewriteRuleTokenStream stream_34=new RewriteRuleTokenStream(adaptor,"token 34");
		RewriteRuleTokenStream stream_59=new RewriteRuleTokenStream(adaptor,"token 59");
		RewriteRuleSubtreeStream stream_output=new RewriteRuleSubtreeStream(adaptor,"rule output");
		RewriteRuleSubtreeStream stream_input=new RewriteRuleSubtreeStream(adaptor,"rule input");
		RewriteRuleSubtreeStream stream_commands=new RewriteRuleSubtreeStream(adaptor,"rule commands");

		try {
			// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:33:12: ( 'read' input '%' commands '%' 'write' output -> ^( BODY ( input )? commands output ) )
			// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:33:14: 'read' input '%' commands '%' 'write' output
			{
			string_literal6=(Token)match(input,55,FOLLOW_55_in_definition150);  
			stream_55.add(string_literal6);

			pushFollow(FOLLOW_input_in_definition152);
			input7=input();
			state._fsp--;

			stream_input.add(input7.getTree());
			char_literal8=(Token)match(input,34,FOLLOW_34_in_definition154);  
			stream_34.add(char_literal8);

			pushFollow(FOLLOW_commands_in_definition156);
			commands9=commands();
			state._fsp--;

			stream_commands.add(commands9.getTree());
			char_literal10=(Token)match(input,34,FOLLOW_34_in_definition158);  
			stream_34.add(char_literal10);

			string_literal11=(Token)match(input,59,FOLLOW_59_in_definition160);  
			stream_59.add(string_literal11);

			pushFollow(FOLLOW_output_in_definition162);
			output12=output();
			state._fsp--;

			stream_output.add(output12.getTree());
			// AST REWRITE
			// elements: output, input, commands
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 33:59: -> ^( BODY ( input )? commands output )
			{
				// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:33:62: ^( BODY ( input )? commands output )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(BODY, "BODY"), root_1);
				// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:33:69: ( input )?
				if ( stream_input.hasNext() ) {
					adaptor.addChild(root_1, stream_input.nextTree());
				}
				stream_input.reset();

				adaptor.addChild(root_1, stream_commands.nextTree());
				adaptor.addChild(root_1, stream_output.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			throw new CompilationException("Erreur de syntaxe");
			/*reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);*/
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "definition"


	public static class input_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "input"
	// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:34:1: input : ( inputSub )? -> ( ^( INPUTSUB inputSub ) )? ;
	public final gwhileParser.input_return input() throws RecognitionException, CompilationException {
		gwhileParser.input_return retval = new gwhileParser.input_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope inputSub13 =null;

		RewriteRuleSubtreeStream stream_inputSub=new RewriteRuleSubtreeStream(adaptor,"rule inputSub");

		try {
			// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:34:7: ( ( inputSub )? -> ( ^( INPUTSUB inputSub ) )? )
			// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:34:9: ( inputSub )?
			{
			// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:34:9: ( inputSub )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==Variable) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:34:9: inputSub
					{
					pushFollow(FOLLOW_inputSub_in_input182);
					inputSub13=inputSub();
					state._fsp--;

					stream_inputSub.add(inputSub13.getTree());
					}
					break;

			}

			// AST REWRITE
			// elements: inputSub
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 34:19: -> ( ^( INPUTSUB inputSub ) )?
			{
				// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:34:22: ( ^( INPUTSUB inputSub ) )?
				if ( stream_inputSub.hasNext() ) {
					// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:34:22: ^( INPUTSUB inputSub )
					{
					Object root_1 = (Object)adaptor.nil();
					root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(INPUTSUB, "INPUTSUB"), root_1);
					adaptor.addChild(root_1, stream_inputSub.nextTree());
					adaptor.addChild(root_0, root_1);
					}

				}
				stream_inputSub.reset();

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			throw new CompilationException("Erreur de syntaxe");
			/*reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);*/
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "input"


	public static class inputSub_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "inputSub"
	// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:35:1: inputSub : Variable ( ',' inputSub )? -> Variable ( inputSub )? ;
	public final gwhileParser.inputSub_return inputSub() throws RecognitionException, CompilationException {
		gwhileParser.inputSub_return retval = new gwhileParser.inputSub_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token Variable14=null;
		Token char_literal15=null;
		ParserRuleReturnScope inputSub16 =null;

		Object Variable14_tree=null;
		Object char_literal15_tree=null;
		RewriteRuleTokenStream stream_Variable=new RewriteRuleTokenStream(adaptor,"token Variable");
		RewriteRuleTokenStream stream_37=new RewriteRuleTokenStream(adaptor,"token 37");
		RewriteRuleSubtreeStream stream_inputSub=new RewriteRuleSubtreeStream(adaptor,"rule inputSub");

		try {
			// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:35:10: ( Variable ( ',' inputSub )? -> Variable ( inputSub )? )
			// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:35:12: Variable ( ',' inputSub )?
			{
			Variable14=(Token)match(input,Variable,FOLLOW_Variable_in_inputSub199);  
			stream_Variable.add(Variable14);

			// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:35:21: ( ',' inputSub )?
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==37) ) {
				alt3=1;
			}
			switch (alt3) {
				case 1 :
					// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:35:22: ',' inputSub
					{
					char_literal15=(Token)match(input,37,FOLLOW_37_in_inputSub202);  
					stream_37.add(char_literal15);

					pushFollow(FOLLOW_inputSub_in_inputSub204);
					inputSub16=inputSub();
					state._fsp--;

					stream_inputSub.add(inputSub16.getTree());
					}
					break;

			}

			// AST REWRITE
			// elements: inputSub, Variable
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 35:37: -> Variable ( inputSub )?
			{
				adaptor.addChild(root_0, stream_Variable.nextNode());
				// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:35:49: ( inputSub )?
				if ( stream_inputSub.hasNext() ) {
					adaptor.addChild(root_0, stream_inputSub.nextTree());
				}
				stream_inputSub.reset();

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			throw new CompilationException("Erreur de syntaxe");
			/*reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);*/
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "inputSub"


	public static class output_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "output"
	// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:36:1: output : Variable ( ',' output )? -> ^( OUTPUT Variable ( output )? ) ;
	public final gwhileParser.output_return output() throws RecognitionException, CompilationException {
		gwhileParser.output_return retval = new gwhileParser.output_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token Variable17=null;
		Token char_literal18=null;
		ParserRuleReturnScope output19 =null;

		Object Variable17_tree=null;
		Object char_literal18_tree=null;
		RewriteRuleTokenStream stream_Variable=new RewriteRuleTokenStream(adaptor,"token Variable");
		RewriteRuleTokenStream stream_37=new RewriteRuleTokenStream(adaptor,"token 37");
		RewriteRuleSubtreeStream stream_output=new RewriteRuleSubtreeStream(adaptor,"rule output");

		try {
			// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:36:8: ( Variable ( ',' output )? -> ^( OUTPUT Variable ( output )? ) )
			// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:36:11: Variable ( ',' output )?
			{
			Variable17=(Token)match(input,Variable,FOLLOW_Variable_in_output223);  
			stream_Variable.add(Variable17);

			// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:36:20: ( ',' output )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==37) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:36:21: ',' output
					{
					char_literal18=(Token)match(input,37,FOLLOW_37_in_output226);  
					stream_37.add(char_literal18);

					pushFollow(FOLLOW_output_in_output228);
					output19=output();
					state._fsp--;

					stream_output.add(output19.getTree());
					}
					break;

			}

			// AST REWRITE
			// elements: output, Variable
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 36:34: -> ^( OUTPUT Variable ( output )? )
			{
				// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:36:37: ^( OUTPUT Variable ( output )? )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(OUTPUT, "OUTPUT"), root_1);
				adaptor.addChild(root_1, stream_Variable.nextNode());
				// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:36:55: ( output )?
				if ( stream_output.hasNext() ) {
					adaptor.addChild(root_1, stream_output.nextTree());
				}
				stream_output.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			throw new CompilationException("Erreur de syntaxe");
			/*reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);*/
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "output"


	public static class commands_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "commands"
	// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:37:1: commands : command ( commands )? -> ^( COMMAND command ( commands )? ) ;
	public final gwhileParser.commands_return commands() throws RecognitionException, CompilationException {
		gwhileParser.commands_return retval = new gwhileParser.commands_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope command20 =null;
		ParserRuleReturnScope commands21 =null;

		RewriteRuleSubtreeStream stream_command=new RewriteRuleSubtreeStream(adaptor,"rule command");
		RewriteRuleSubtreeStream stream_commands=new RewriteRuleSubtreeStream(adaptor,"rule commands");

		try {
			// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:37:10: ( command ( commands )? -> ^( COMMAND command ( commands )? ) )
			// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:37:12: command ( commands )?
			{
			pushFollow(FOLLOW_command_in_commands250);
			command20=command();
			state._fsp--;

			stream_command.add(command20.getTree());
			// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:37:20: ( commands )?
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==Variable||(LA5_0 >= 45 && LA5_0 <= 46)||LA5_0==49||LA5_0==53||LA5_0==58) ) {
				alt5=1;
			}
			switch (alt5) {
				case 1 :
					// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:37:21: commands
					{
					pushFollow(FOLLOW_commands_in_commands253);
					commands21=commands();
					state._fsp--;

					stream_commands.add(commands21.getTree());
					}
					break;

			}

			// AST REWRITE
			// elements: command, commands
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 37:32: -> ^( COMMAND command ( commands )? )
			{
				// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:37:35: ^( COMMAND command ( commands )? )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(COMMAND, "COMMAND"), root_1);
				adaptor.addChild(root_1, stream_command.nextTree());
				// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:37:53: ( commands )?
				if ( stream_commands.hasNext() ) {
					adaptor.addChild(root_1, stream_commands.nextTree());
				}
				stream_commands.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			throw new CompilationException("Erreur de syntaxe");
			/*reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);*/
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "commands"


	public static class vars_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "vars"
	// /home/kilian/ESIR2/S7/TLC/TP2/while_compiler/src/gwhile.g:38:1: vars : Variable ( ',' vars )? -> Variable ( vars )? ;
	public final gwhileParser.vars_return vars() throws RecognitionException, CompilationException {
		gwhileParser.vars_return retval = new gwhileParser.vars_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token Variable22=null;
		Token char_literal23=null;
		ParserRuleReturnScope vars24 =null;

		Object Variable22_tree=null;
		Object char_literal23_tree=null;
		RewriteRuleTokenStream stream_Variable=new RewriteRuleTokenStream(adaptor,"token Variable");
		RewriteRuleTokenStream stream_37=new RewriteRuleTokenStream(adaptor,"token 37");
		RewriteRuleSubtreeStream stream_vars=new RewriteRuleSubtreeStream(adaptor,"rule vars");
